[gd_scene load_steps=10 format=3 uid="uid://bgiqka1bdq7ct"]

[ext_resource type="Script" path="res://scenes/pause_screen.gd" id="1_l5h6s"]
[ext_resource type="Texture2D" uid="uid://the65ph71oeo" path="res://assets/kenney_platformerpack/PNG/Tiles/sign.png" id="2_ew5de"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y1tnr"]
bg_color = Color(0, 0, 0, 0.501961)

[sub_resource type="SystemFont" id="SystemFont_bpx4r"]
font_names = PackedStringArray("Minecraft")
subpixel_positioning = 0

[sub_resource type="SystemFont" id="SystemFont_jf5lf"]
font_names = PackedStringArray("Minecraft")
subpixel_positioning = 0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hover"]
texture = ExtResource("2_ew5de")
modulate_color = Color(1.2, 1.2, 1.2, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_pressed"]
texture = ExtResource("2_ew5de")
modulate_color = Color(0.8, 0.8, 0.8, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_normal"]
texture = ExtResource("2_ew5de")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_level1"]
texture = ExtResource("2_ew5de")

[node name="PauseScreen" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_l5h6s")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_y1tnr")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -135.0
offset_top = -163.5
offset_right = 135.0
offset_bottom = 163.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_bpx4r")
theme_override_font_sizes/font_size = 64
text = "PAUSED"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ResumeButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = SubResource("SystemFont_jf5lf")
theme_override_font_sizes/font_size = 24
theme_override_styles/hover = SubResource("StyleBoxTexture_hover")
theme_override_styles/pressed = SubResource("StyleBoxTexture_pressed")
theme_override_styles/normal = SubResource("StyleBoxTexture_normal")
text = "RESUME"

[node name="MainMenuButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = SubResource("SystemFont_jf5lf")
theme_override_font_sizes/font_size = 24
theme_override_styles/hover = SubResource("StyleBoxTexture_hover")
theme_override_styles/pressed = SubResource("StyleBoxTexture_pressed")
theme_override_styles/normal = SubResource("StyleBoxTexture_level1")
text = "MAIN MENU"

[connection signal="pressed" from="VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
